--- a/.classpath
+++ b/.classpath
@@ -6,7 +6,11 @@
 			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="gameEngine/libs/natives"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="libs/jars/lwjgl_util.jar"/>
+	<classpathentry kind="lib" path="libs/jars/lwjgl_util.jar">
+		<attributes>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="ComputerGraphics/libs/natives"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="lib" path="libs/jars/lwjgl.jar"/>
 	<classpathentry kind="lib" path="libs/jars/slick-util.jar"/>
 	<classpathentry kind="output" path="bin"/>
