Started with skybox
We now have a completly black skybox :/

--- a/.classpath
+++ b/.classpath
@@ -13,5 +13,6 @@
 	</classpathentry>
 	<classpathentry kind="lib" path="libs/jars/lwjgl.jar"/>
 	<classpathentry kind="lib" path="libs/jars/slick-util.jar"/>
+	<classpathentry kind="lib" path="libs/jars/PNGDecoder.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
