Mother of all pushes: Restructure, Clean up and JavaDoc

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,9 +1,9 @@
-/gui/
-/terrains/
-/water/
-/entities/
-/engineTester/
-/shaders/
-/renderEngine/
 /textures/
 /toolbox/
+/entities/
+/gui/
+/renderEngine/
+/shaders/
+/terrains/
+/engineTester/
+/models/
